🐛 fix: update .gitignore to include new build file patterns and improve AudioManager and GameManager logic for better float handling

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,14 @@ Thumbs.db
 build/
 dist/
 release/
+builds/*.x86_64
+builds/*.exe
+builds/*.pck
+builds/*.dmg
+builds/*.app
+builds/*.deb
+builds/*.apk
+builds/*.ipa
 
 # Temporary files
 *.tmp
