Refactor documentation and project structure for Proyecto-Z
- Updated "getting-started.md" to improve clarity and organization.
- Revised "installation.md" with clearer instructions and updated system requirements.
- Changed project references from "Mystic Dungeon Crawler" to "Proyecto-Z" in relevant files.
- Created a proposed documentation structure in "README_PROPOSED.md" for better organization.
- Added stubs for various API and development guides to facilitate future documentation.
- Implemented a comprehensive "desarrollo-componentes.md" guide for component development.
- Introduced troubleshooting documentation for debugging, performance tips, and resource issues.
- Consolidated and preserved content from various analysis reports for future reference.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ============================================================================
-# MYSTIC DUNGEON CRAWLER - .gitignore
+# Proyecto-Z - .gitignore
 # Professional Godot 4.4+ project gitignore
 # ============================================================================
 
