Refactor SettingsMenu: Streamline audio and video settings handling
- Removed redundant audio effect sound requests in MainMenu.
- Consolidated audio and video settings initialization and UI update logic in SettingsMenu.
- Updated volume sliders to use a normalized range (0.0 to 1.0) instead of percentage.
- Simplified tab management by removing unused gameplay and accessibility tabs.
- Enhanced connection handling for UI elements to reduce redundancy.
- Improved settings loading and saving mechanisms for better performance and clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -260,16 +260,16 @@ site/
 !/.github/**
 
 # Keep build directory structure
-!builds/README.md
-!builds/.gitkeep
+# !builds/README.md
+# !builds/.gitkeep
 
 # Keep config examples
 !config/example_*
 !config/*.example
 
 # Keep documentation
-!docs/
-!docs/**/*.md
+# !docs/
+# !docs/**/*.md
 
 # ============================================================================
 # CUSTOM PROJECT IGNORES
